@@ -10,6 +10,7 @@
 	NX-1501 (In test mode $dci variable is not set)
 	NX-1503 (Access denied error on attempt to take screenshot even if user has take screenshot access right)
 	NX-1504 (Server crash after compiling library script with syntax error)
+	NX-1505 (Assignment in NXSL "global" statement ignored if variable already declared as global)
 
 
 *
